--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "dotenv": "^10.0.0",
     "formik": "^2.2.9",
     "jsdoc": "^3.6.7",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.22.2",
     "react-scripts": "4.0.3",
     "sass-loader": "^10.0.5",
+    "sort-by": "^1.2.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
     "webpack": "4.44.2",
